# job-search-email

./: .env.example  .gitignore  README.md  claude.md  email_preview.html  job_results_filtered.json  job_results_scored.json  job_score_cache.json  location_cache.json  profile.yaml  pyproject.toml
.github/workflows/: daily_job.yml
assets/: recruitment_agencies.csv
docs/superpowers/plans/: 2026-06-27-caching.md  2026-06-27-deep-job-scoring.md  2026-06-27-search-plan-generation.md  2026-06-27-sponsor-filter.md  2026-06-28-debug-email.md  2026-06-28-location-debug-and-filter.md  2026-06-29-employment-type-false-positives-and-llm-backstop.md  2026-06-29-explain-job-rating.md  2026-06-29-local-debug-run-and-job-lookup.md  2026-06-29-sponsor-filter.md  (+2 more)
src/job_search_email/: __init__.py  cache.py  debug_email.py  debug_run.py  email.py  evaluator_notes.py  exclusions.py  explain_job.py  explain_render.py  filter.py  filter_trace.py  fixtures.py  job_resolver.py  local_run.py  location_filter.py  main.py  models.py  nhs_rules.py  queries.py  recruitment_filter.py  scorer.py  sponsor_filter.py
tests/: test_cache.py  test_debug_email.py  test_debug_run.py  test_email.py  test_explain_job.py  test_explain_render.py  test_explain_scorer_seam.py  test_filter.py  test_filter_trace.py  test_job_listing.py  test_job_resolver.py  test_local_testing.py  test_location_filter.py  test_main.py  test_queries.py  test_recruitment_filter.py  test_scorer.py  test_sponsor_filter.py
tests/search_api/: test_dedup.py  test_fetcher.py  test_jobspy_searcher.py  test_nhs_jobs.py  test_reed.py
(+16 files in other folders)
